[package]
name = "ream-core"
version = "0.1.0"
authors = ["Chih-Ming Louis Lee <louis@chihminglee.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.70"

[profile.release]
opt-level = 3


[lib]
crate-type = ["cdylib"]
