[package]
name = "ream"
version = "0.4.0"
authors = ["Chih-Ming Louis Lee <louis@chihminglee.com>"]
edition = "2018"
license = "MIT"
description = "Data language for building maintainable social science datasets"
homepage = "https://ream-lang.org"
documentation = "https://ream-lang.org"
repository = "https://github.com/chmlee/ream-core"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.70"
regex = "1"

[profile.release]
opt-level = 2


[lib]
crate-name = "ream"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "ream"
path = "src/main.rs"
